# hide-and-seek

hide-and-seek-main/: CMakeLists.txt  CustomView.cpp  CustomView.h  Ghost.cpp  Ghost.h  Player.cpp  Player.h  main.cpp  res.qrc
